--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -43,7 +43,7 @@
                                 <div class="media">
                                     <% if (typeof (data.item.author) != 'undefined' && data.item.author) { %>
                                     <div class="media-body">
-                                        <img src="/images/user_default.png" class="media-object author-photo img-thumbnail" alt="library">
+                                        <img src="/image/user/icon-default" class="media-object author-photo img-thumbnail" alt="library">
                                         <br>
                                         <h5><%= data.item.author %></h5>
                                     </div>
@@ -109,7 +109,7 @@
                                                 <% if (review.user.avatar !== null) { %>
                                                 <img src="<%= review.user.avatar %>" class="media-object w-70-h-70" alt="library">
                                                 <% } else { %>
-                                                <img src="/images/user/icon_user_default.png" class="media-object  w-70-h-70" alt="library">
+                                                <img src="/image/user/icon-default" class="media-object  w-70-h-70" alt="library">
                                                 <% } %>
                                             </div>
                                             <div class="media-body">
@@ -167,7 +167,7 @@
                                                 <% if (user.avatar !== null) { %>
                                                 <img src="<%= user.avatar %>" class="media-object" alt="library">
                                                 <% } else { %>
-                                                <img src="/images/user/icon_user_default.png" class="media-object" alt="library">
+                                                <img src="/image/user/icon-default" class="media-object" alt="library">
                                                 <% } %>
                                             </div>
                                             <div class="media-body">
@@ -198,7 +198,7 @@
                                                 <% if (user.avatar !== null) { %>
                                                 <img src="<%= user.avatar %>" class="media-object" alt="library">
                                                 <% } else { %>
-                                                <img src="/images/user/icon_user_default.png" class="media-object" alt="library">
+                                                <img src="/image/user/icon-default" class="media-object" alt="library">
                                                 <% } %>
                                             </div>
                                             <div class="media-body">
