--- a/views/books/section.ejs
+++ b/views/books/section.ejs
@@ -38,7 +38,7 @@
                                     <% if (book.image !== null) { %>
                                     <img src="<%= book.image.web.thumbnail_path %>" class="media-object" alt="">
                                     <% } else { %>
-                                    <img src="/images/book_thumb_default.jpg" class="media-object" alt="">
+                                    <img src="/image/book/thumb-default" class="media-object" alt="">
                                     <% } %>
                                 </div>
                                 <div class="media-body">
