--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -42,7 +42,7 @@
                                         <img src="<%= user.avatar %>" class="img-circle img-thumbnail" alt="library" />
                                     <% }
                                     else { %>
-                                        <img src="/images/user_default.png" class="img-circle img-thumbnail" alt="library" />
+                                        <img src="/image/user/icon-default" class="img-circle img-thumbnail" alt="library" />
                                     <% } %>
                                 </a>
                                 <ul class="dropdown-menu">
