--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -31,7 +31,7 @@
                     <% if (typeof data.avatar != 'undefined' && data.avatar) { %>
                         <img class="img-profile" src="<%= data.avatar %>" alt="library">
                     <% } else { %>
-                        <img class="img-profile" src="/images/user_default.png" alt="library">
+                        <img class="img-profile" src="/image/user/icon-default" alt="library">
                     <% } %>
                 </div>
                 <div class="book-content">
