--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
                             <% if (book.image !== null) { %>
                             <img src="<%= book.image.web.thumbnail_path %>" class="media-object" alt="<%= book.title %>">
                             <% } else { %>
-                            <img src="/images/book_thumb_default.jpg" class="media-object" alt="<%= book.title %>">
+                            <img src="/image/book/thumb-default" class="media-object" alt="<%= book.title %>">
                             <% } %>
                         </div>
                         <div class="media-body">
