--- a/views/books/section.ejs
+++ b/views/books/section.ejs
@@ -58,7 +58,7 @@
                                     <p>
                                         <%= book.overview %>
                                     </p>
-                                    <a href="/books/<%= book.id %>" class="text-primary">Xem chi tiết</a>
+                                    <a href="/books/<%= book.id %>" class="text-primary">View detail</a>
                                 </div>
                             </div>
                         </div>
