--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,5 +1,5 @@
 <section class="relative fix" id="sc3">
-    <div class="hide-categoryIds" data-category-ids=<%= categoryIds %> data-access-token=<%= accessToken %>></div>
+    <div class="hide-categoryIds" data-category-ids=<%= categoryIds %></div>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 text-center">
@@ -67,6 +67,7 @@
         </div>
     </div>
 </section>
+
 <%- contentFor('appjs') %>
 <script src="/javascripts/users/list_category.js" type="text/javascript"></script>
 <script src="/javascripts/users/interestedCategories.js" type="text/javascript"></script>
