--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -139,6 +139,7 @@
                                 <label class="radio-inline"><input type="radio" name="type-search" value="title" checked="true">Title</label>
                                 <label class="radio-inline"><input type="radio" name="type-search" value="author">Author</label>
                                 <label class="radio-inline"><input type="radio" name="type-search" value="description">Description</label>
+                                <label class="radio-inline"><input type="radio" name="type-search" value="Others">Others</label>
                             </div>
                             <div class="category-container col-md-12">
                                 <input type="text" id="search-book"/>
