Task #123456: Display/show message validation in the correct position

--- a/resources/assets/css/overright.css
+++ b/resources/assets/css/overright.css
@@ -198,3 +198,11 @@
 [data-notify="container"][class*="alert-"] {
     width: 300px;
 }
+
+.error {
+    color: red;
+}
+
+.has-error .form-control {
+    border-color: red !important;
+}
