--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -26,7 +26,10 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!--Logo-->
-                    <a href="/home" class="navbar-left show"><img src="/images/logo.png" alt="library"></a>
+                    <a href="/home" class="navbar-left show">
+                        <img src="/images/logo_framgia.png" alt="library" class="logo-image">
+                        <span class="logo-text">Book</span>
+                    </a>
                     <div class="space-10"></div>
                 </div>
                 <!--Toggle-button-->
