--- a/resources/assets/css/overright.css
+++ b/resources/assets/css/overright.css
@@ -206,3 +206,13 @@
 .has-error .form-control {
     border-color: red !important;
 }
+
+.logo-text {
+    color: white;
+    font-size: 25px;
+}
+
+.logo-image {
+    width: 50px;
+    height: 50px;
+}
