--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -54,7 +54,27 @@
                                         <h5> By Framgia </h5>
                                     </div>
                                     <% } %>
-                                </div>
+                                </div>%>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-8">
+                                <h4 class="tip-left">Owner By</h4>
+                                <div class="media">
+                                    <% if (data.item.owner !== null) { %>
+                                    <div class="media-body">
+                                        <img src="/images/user_default.png" class="media-object author-photo img-thumbnail" alt="library">
+                                        <br>
+                                        <h5>username</h5>
+                                    </div>
+                                    <% } else { %>
+                                    <div class="media-left">
+                                        <img src="/images/logo_framgia.png" class="media-object author-photo background--white img-thumbnail" alt="library">
+                                        <br>
+                                        <h5> By Framgia </h5>
+                                    </div>
+                                    <% } %>
+                                </div>%>
                             </div>
                         </div>
                         <div class="space-30"></div>
@@ -64,54 +84,14 @@
                         <h4 class="tip-left">Rating</h4>
                         <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" value=<%= data.item.avg_star %> disabled="true" data-step="0.01" data-size="xs">
                         <div class="space-20"></div>
-                        <% if (typeof user !== 'undefined') { %>
-                            <% var userReading = data.item.user_reading_book; %>
-                            <% var userWaitings = data.item.users_waiting_book; %>
-                            <% var bookStatus = data.item.status; %>
-
-                            <% if (bookStatus === configs.book.status.unavailable) { %>
-                                <%
-                                if (userReading !== null && user.id === userReading.id) {
-                                %>
-                                    <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="<%= configs.book_user.status.done %>">Return Book</button>
-                                <%
-                                } else if (userReading !== null && userWaitings.length === 0) {
-                                %>
-                                    <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="<%= configs.book_user.status.waiting %>">Add to Waiting</button>
-                                <% } %>
-
-                                <%
-                                    if (userWaitings.length > 0) {
-                                        var flag = true;
-                                        for(var i = 0; i < userWaitings.length; i++) {
-                                            if (user.id === userWaitings[i].id) {
-                                                flag = false;
-                                %>
-                                                <button
-                                                    class="btn btn-primary hover-btn-default btn-xs"
-                                                    id="booking-book" data-id="<%= data.item.id %>"
-                                                    data-status="<%= configs.book_user.status.cancel_waiting %>">Cancel Waiting
-                                                </button>
-                                            <% break; %>
-                                            <% } %>
-                                        <% } %>
-                                        <% if (flag && userReading !== null && user.id !== userReading.id) { %>
-                                            <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="<%= configs.book_user.status.waiting %>">Add to Waiting</button>
-                                        <% } %>
-                                    <% } %>
-                            <% } else if (bookStatus === configs.book.status.available) { %>
-                                <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="<%= configs.book_user.status.reading %>">Add to Reading</button>
-                            <% } %>
-                        <% } else { %>
-                            <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="<%= configs.book_user.status.reading %>">Add to Reading</button>
-                        <% } %>
+                        <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="<%= data.item.btn_booking.data_status %>"><%= data.item.btn_booking.text %></button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<section class="relative"">
+<section class="relative">
     <div class="container">
         <div class="panel">
             <div class="panel-heading">
@@ -125,7 +105,7 @@
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="user_review">
                         <div class="row event-list">
-                            <% if (data.item.reviews_detail_book !== null) { %>
+                            <% if (data.item.reviews_detail_book.length > 0) { %>
                             <% data.item.reviews_detail_book.forEach(function (review) { %>
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                 <div class="event-item wow fadeInRight">
@@ -168,11 +148,10 @@
                             <form action="/books/review/<%= data.item.id %>" id="form-review" method="post">
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                     <div class="form-group">
-                                        <% if (typeof(dataReview) != 'undefined' && dataReview && typeof(user) != 'undefined' && typeof(dataReview.user) != 'undefined' && dataReview.user.id == user.id
-                                        ) { %>
-                                            <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5"placeholder="Enter your review..." required> <%= dataReview.content%> </textarea>
+                                        <% if (data.item.current_user_review !== null) { %>
+                                            <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5"placeholder="Enter your review..." required> <%= data.item.current_user_review.content %> </textarea>
                                             <div class="col-xs-12 col-sm-12 col-md-12">
-                                                <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" data-step="1" value=<%= dataReview.star %> data-size="xs">
+                                                <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" data-step="1" value=<%= data.item.current_user_review.star %> data-size="xs">
                                             </div>
                                         <% } else { %>
                                             <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5" placeholder="Enter your review..." required></textarea>
@@ -184,8 +163,7 @@
                                 </div>
                                 <div class="space-20"></div>
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
-                                    <% if (typeof(dataReview) != 'undefined' && dataReview && typeof(user) != 'undefined' && typeof(dataReview.user) != 'undefined' && dataReview.user.id == user.id
-                                        ) { %>
+                                    <% if (data.item.current_user_review !== null) { %>
                                         <button type="submit" class="btn btn-primary hover-btn-default"> Edit review <i class="fa fa-long-arrow-right"></i></button>
                                     <% } else { %>
                                         <button type="submit" class="btn btn-primary hover-btn-default"> Review <i class="fa fa-long-arrow-right"></i></button>
@@ -203,9 +181,9 @@
                                         <div class="media">
                                             <div class="media-left">
                                                 <% if (data.item.user_reading_book.avatar !== null) { %>
-                                                <img src="<%= data.item.user_reading_book.avatar %>" class="media-object" alt="library">
+                                                <img src="<%= data.item.user_reading_book.avatar %>" class="media-object w-70-h-70" alt="library">
                                                 <% } else { %>
-                                                <img src="/images/user/icon_user_default.png" class="media-object" alt="library">
+                                                <img src="/images/user/icon_user_default.png" class="media-object w-70-h-70" alt="library">
                                                 <% } %>
                                             </div>
                                             <div class="media-body">
