--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4">
-                <a href="#"><img src="/images/logo.png" alt="library"></a>
+                <a href="#"><img src="/images/logo_framgia.png" alt="library" class="logo-image"><span class="logo-text">Book</span></a>
                 <div class="space-20"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida, quam vitae est Sed non eros elementum nulla sodales ullamcorper.</p>
                 <div class="space-10"></div>
